fixed the mediaqueries breakpoint and adjusted spacing

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -136,7 +136,7 @@ footer {
 
 /* MEDIA QUERIES */
 
-@media screen and (max-width: 412px) {
+@media screen and (max-width: 415px) {
   .flex-row > * {
     flex-basis: 100%;
     max-width: 412px;
@@ -146,8 +146,8 @@ footer {
   }
 
   .img-size {
-    max-width: 325px;
-    max-height: 250px;
+    width: 325px;
+    height: 250px;
   }
 
 .about-me p {
